# os_lab_5

./: CMakeLists.txt  Makefile  calculation_node.cpp  control.cpp  topology.hpp
src/: a.out  calculation_node.cpp  control.cpp  zmq_std.hpp
